# xarm6-etf-lab

./: .gitignore  .gitmodules  Makefile  README.md  source_dirs.bash
src/etf_modules/aruco_calibration/: CMakeLists.txt  package.xml
src/etf_modules/aruco_calibration/aruco/cfg/: ArucoThreshold.cfg
src/etf_modules/aruco_calibration/aruco_ros/launch/: single.launch.py
src/etf_modules/aruco_calibration/include/aruco_calibration/: aruco_calibration.h
src/etf_modules/aruco_calibration/src/: aruco_calibration.cpp
src/etf_modules/perception_etflab/: .gitmodules  CMakeLists.txt  package.xml
src/etf_modules/perception_etflab/cmake/: Findrpmpl_library.cmake
src/etf_modules/perception_etflab/include/object_segmentation/: object_segmentation.h
src/etf_modules/perception_etflab/src/: object_segmentation.cpp  object_segmentation_node.cpp  pointcloud_combiner.cpp
src/etf_modules/pointcloud_combiner/: CMakeLists.txt  package.xml
src/etf_modules/pointcloud_combiner/src/: pointcloud_combiner.cpp
src/etf_modules/real_bringup/: CMakeLists.txt  package.xml
src/etf_modules/real_bringup/launch/: real_xarm6_etflab.launch.py  realsense_etflab.launch.py
src/etf_modules/real_bringup/scripts/: test_move_xarm6_gazebo.py
src/etf_modules/sim_bringup/: CMakeLists.txt  package.xml
src/etf_modules/sim_bringup/cmake/: Findlibrpmpl_library.cmake  Findrpmpl_library.cmake
src/etf_modules/sim_bringup/data/: scenario_etf_lab.yaml
src/etf_modules/sim_bringup/include/: RealTimeDRGBTConnect.h  test_RealTimeDRGBTConnect.h  test_planners.h
src/etf_modules/sim_bringup/launch/: _robot_moveit_gazebo.launch.py  _robot_spawn.launch.py  xarm6_beside_table_gazebo.launch.py  xarm6_etflab.launch.py  xarm6_moveit_gazebo.launch.py
src/etf_modules/sim_bringup/rviz/: etflab.rviz
src/etf_modules/sim_bringup/scripts/: run_RPMPLv2.cpp  test_move_xarm6.cpp  test_move_xarm6_gazebo.cpp  test_planners.cpp  test_read_octomap.cpp  test_read_octree.cpp
src/etf_modules/sim_bringup/src/: RealTimeDRGBTConnect.cpp  test_RealTimeDRGBTConnect.cpp  test_move_xarm6.py  test_planners.cpp  test_read_octomap.cpp  test_sim_bringup_node.cpp
src/etf_modules/sim_bringup/urdf/: camera_depth.xacro  camera_depth_left.xacro  camera_depth_right.xacro  xarm_device.urdf.xacro
src/etf_modules/sim_bringup/world/: etflab-no-cameras.world  etflab.world
src/etf_modules/sim_bringup/world/models/aruco_marker/: model.sdf
src/etf_modules/sim_bringup/world/models/aruco_marker/materials/textures/: marker.png.BAK
